--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Webgl_Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Webgl_Build.data",
-        frameworkUrl: buildUrl + "/Webgl_Build.framework.js",
-        codeUrl: buildUrl + "/Webgl_Build.wasm",
+        dataUrl: buildUrl + "/Webgl_Build.data.gz",
+        frameworkUrl: buildUrl + "/Webgl_Build.framework.js.gz",
+        codeUrl: buildUrl + "/Webgl_Build.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Match3",
